--- a/html/flashback.html
+++ b/html/flashback.html
@@ -1,1 +1,16 @@
-flashback
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>2007</title>
+	<link rel="stylesheet" href="./bootstrap-3.2.0-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+	<div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+			Вопрос №1
+		</div>
+	</div>
+</body>
+</html>
