--- a/html/main.html
+++ b/html/main.html
@@ -1,1 +1,27 @@
-main
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>2007</title>
+	<link rel="stylesheet" href="./bootstrap-3.2.0-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+	<div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+		<div class="logo text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+			2007
+		</div>
+		<div class="information text-center col-md-5 col-sm-9 col-xs-9 col-md-offset-3 col-sm-offset-1 col-xs-offset-1">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit minus nesciunt aspernatur hic aperiam odio, quas est commodi totam aliquid pariatur praesentium nostrum placeat mollitia odit tempore. Modi, eveniet.
+		</div>
+		<div class="row text-center col-md-5 col-sm-9 col-xs-9 col-md-offset-3 col-sm-offset-1 col-xs-offset-1">
+			<a class="btn btn-retrieve" href="./flashback">Вернуть</a>
+		</div>
+		<div class="social col-md-6 col-sm-9 col-xs-9 col-md-offset-5 col-sm-offset-1 col-xs-offset-1">
+			<a class="text-center" href="https://vk.com/id23230644">
+					<img class="media-object" src="./img/vk.png" alt="...">
+			</a>
+		</div>
+	</div>
+</body>
+</html>
