--- a/html/flashback.html
+++ b/html/flashback.html
@@ -11,6 +11,22 @@
 		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
 			Вопрос №1
 		</div>
+		<div class="option col-md-3 col-sm-11 col-xs-11 col-md-offset-2 col-sm-offset-1 col-xs-offset-1">
+			<img class="media-object" src="./img/kartinka.jpg" alt="...">
+			<div>кнопка</div>
+		</div>
+		<div class="option col-md-3 col-sm-11 col-xs-11 col-md-offset-2 col-sm-offset-1 col-xs-offset-1">
+			<img class="media-object" src="./img/kartinka.jpg" alt="...">
+			<div>кнопка</div>
+		</div>
+		<div class="option col-md-3 col-sm-11 col-xs-11 col-md-offset-2 col-sm-offset-1 col-xs-offset-1">
+			<img class="media-object" src="./img/kartinka.jpg" alt="...">
+			<div>кнопка</div>
+		</div>
+		<div class="option col-md-3 col-sm-11 col-xs-11 col-md-offset-2 col-sm-offset-1 col-xs-offset-1">
+			<img class="media-object" src="./img/kartinka.jpg" alt="...">
+			<div>кнопка</div>
+		</div>
 	</div>
 </body>
 </html>
