--- a/html/flashback.html
+++ b/html/flashback.html
@@ -12,7 +12,7 @@
 			Вопрос №1
 		</div>
 		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
-			Lorem ipsum dolor sit amet, consectetur ?
+			Lorem ipsum dolor sit amet, consectetur?
 		</div>
 		<div class="variants text-center col-md-7 col-sm-7 col-xs-7 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
 			<div class="option">
@@ -35,6 +35,47 @@
 			</div>
 			<div class="option">
 				<img class="media-object" src="./img/sasha.png" alt="...">
+				<form action=""><button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+		</div>
+
+		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+			Lorem ipsum dolor sit amet, consectetur?
+		</div>
+		<div class="variants text-center col-md-7 col-sm-7 col-xs-7 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
+			<div class="option">
+				<audio controls>
+  <source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option">
+				<audio controls>
+  <source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option">
+				<audio controls>
+  <source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option">
+				<audio controls>
+  <source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 				<form action=""><button type="submit" name="" class="btn btn-choice">Выбрать</button>
 				</form>
 			</div>
