--- a/html/flashback.html
+++ b/html/flashback.html
@@ -88,9 +88,9 @@
 		<hr class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
 
 		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
-			Lorem ipsum dolor sit amet, consectetur?
+			Lorem ipsum dolor sit amet, consectetur?2
 		</div>
-		<div class="option text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+		<div class="option audio-question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-3 col-sm-offset-1 col-xs-offset-1">
 			<audio controls>
 				<source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
 				Your browser does not support the audio element.
@@ -155,6 +155,84 @@
 		</div>
 
 		<hr class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+
+		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+			Lorem ipsum dolor sit amet, consectetur?
+			<div class="col-md-5 col-sm-9 col-xs-9 col-md-offset-4 col-sm-offset-2 col-xs-offset-2">
+				<img class="photo-question media-object " src="./img/sasha.png" alt="...">
+			</div>
+		</div>
+		<div class="variants text-center col-md-10 col-sm-12 col-xs-12 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
+			<div class="option col-md-4 col-sm-5 col-xs-5 col-md-offset-3 col-sm-offset-1 col-xs-offset-2">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, reprehenderit! Esse, laborum ipsa alias, ut cumque non facere aperiam delectus, dicta modi magni vel. Eligendi aperiam, consectetur quo laudantium ipsa!
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option col-md-4 col-sm-5 col-xs-5 col-md-offset-3 col-sm-offset-1 col-xs-offset-2">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, reprehenderit! Esse, laborum ipsa alias, ut cumque non facere aperiam delectus, dicta modi magni vel. Eligendi aperiam, consectetur quo laudantium ipsa!
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option col-md-4 col-sm-5 col-xs-5 col-md-offset-3 col-sm-offset-1 col-xs-offset-2">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, reprehenderit! Esse, laborum ipsa alias, ut cumque non facere aperiam delectus, dicta modi magni vel. Eligendi aperiam, consectetur quo laudantium ipsa!
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option col-md-4 col-sm-5 col-xs-5 col-md-offset-3 col-sm-offset-1 col-xs-offset-2">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, reprehenderit! Esse, laborum ipsa alias, ut cumque non facere aperiam delectus, dicta modi magni vel. Eligendi aperiam, consectetur quo laudantium ipsa!
+				<form action=""><button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+		</div>
+
+		<hr class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+
+		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+			Lorem ipsum dolor sit amet, consectetur?
+			<div class="col-md-5 col-sm-9 col-xs-9 col-md-offset-4 col-sm-offset-2 col-xs-offset-2">
+				<img class="photo-question media-object " src="./img/sasha.png" alt="...">
+			</div>
+		</div>
+		<div class="variants text-center col-md-7 col-sm-7 col-xs-7 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
+			<div class="option">
+				<audio controls>
+					<source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option">
+				<audio controls>
+					<source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option">
+				<audio controls>
+					<source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
+				<form action="">
+					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+			<div class="option">
+				<audio controls>
+					<source src="https://cs3-2v4.vk-cdn.net/p4/61cc65223bed72.mp3?extra=vUc7rDZQqptPds2-tZEJ_2VGQH5E-do8e5mPv--khkJ5VEdxAh3_eP0rKO2pniLru2ZCzcEzUbKepVQoeUfQpQzRP9Y8_wy3lA,253" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
+				<form action=""><button type="submit" name="" class="btn btn-choice">Выбрать</button>
+				</form>
+			</div>
+		</div>
 
 	</div>
 	<script src="./js/jquery.min.js"></script>
