--- a/html/flashback.html
+++ b/html/flashback.html
@@ -13,30 +13,30 @@
 			Вопрос №1
 		</div>
 
-		<div class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+		<div id="question-text" class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
 			Lorem ipsum dolor sit amet, consectetur?
 		</div>
 		<div class="variants text-center col-md-7 col-sm-7 col-xs-7 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
 			<div class="option">
-				<img class="media-object" src="./img/sasha.png" alt="...">
+				<div id="answer1"><img class="media-object" src="./img/sasha.png" alt="..."></div>
 				<form action="">
 					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
 				</form>
 			</div>
 			<div class="option">
-				<img class="media-object" src="./img/sasha.png" alt="...">
+				<div id="answer2"><img class="media-object" src="./img/sasha.png" alt="..."></div>
 				<form action="">
 					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
 				</form>
 			</div>
 			<div class="option">
-				<img class="media-object" src="./img/sasha.png" alt="...">
+				<div id="answer3"><img class="media-object" src="./img/sasha.png" alt="..."></div>
 				<form action="">
 					<button type="submit" name="" class="btn btn-choice">Выбрать</button>
 				</form>
 			</div>
 			<div class="option">
-				<img class="media-object" src="./img/sasha.png" alt="...">
+				<div id="answer4"><img class="media-object" src="./img/sasha.png" alt="..."></div>
 				<form action=""><button type="submit" name="" class="btn btn-choice">Выбрать</button>
 				</form>
 			</div>
