--- a/html/flashback.html
+++ b/html/flashback.html
@@ -34,6 +34,19 @@
 				<button type="submit" name="" class="btn btn-choice">Выбрать</button>
 			</div>
 		</div>
+
+		<div class="years-line text-center col-md-7 col-sm-9 col-xs-9 col-md-offset-2 col-sm-offset-1 col-xs-offset-1">
+			<div class="years active-year">2015</div>
+			<div class="years">2014</div>
+			<div class="years">2013</div>
+			<div class="years">2012</div>
+			<div class="years">2011</div>
+			<div class="years">2010</div>
+			<div class="years">2009</div>
+			<div class="years">2008</div>
+			<div class="years">2007</div>
+		</div>
+
 	</div>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/main.js"></script>
