--- a/html/flashback.html
+++ b/html/flashback.html
@@ -10,7 +10,7 @@
 	<div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
 
 		<div class="num-question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
-			Вопрос №1
+			Вопрос №<span id="question-num">1</span>
 		</div>
 
 		<div id="question-text" class="question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
