--- a/html/flashback.html
+++ b/html/flashback.html
@@ -1,3 +1,5 @@
+<?php if (!$_GET['ajax']): ?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +10,8 @@
 </head>
 <body>
 	<div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+
+<?php endif ?>
 
 		<div class="num-question text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
 			Вопрос №<span id="question-num">1</span>
@@ -47,8 +51,12 @@
 			<div class="years">2007</div>
 		</div>
 
+<?php if (!$_GET['ajax']): ?>
+
 	</div>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 </html>
+
+<?php endif ?>
