--- a/html/main.html
+++ b/html/main.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+	<div id="main-frame" class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
 		<div class="logo text-center col-md-9 col-sm-9 col-xs-9 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
 			2007
 		</div>
@@ -15,7 +15,7 @@
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit minus nesciunt aspernatur hic aperiam odio, quas est commodi totam aliquid pariatur praesentium nostrum placeat mollitia odit tempore. Modi, eveniet.
 		</div>
 		<div class="row text-center col-md-5 col-sm-9 col-xs-9 col-md-offset-3 col-sm-offset-1 col-xs-offset-1">
-			<a class="btn btn-retrieve" href="./flashback">Вернуть</a>
+			<a id="get-back" class="btn btn-retrieve" >Вернуть</a>
 		</div>
 		<div class="social col-md-6 col-sm-9 col-xs-9 col-md-offset-5 col-sm-offset-1 col-xs-offset-1">
 			<a class="text-center" href="https://vk.com/id23230644">
@@ -23,6 +23,7 @@
 			</a>
 		</div>
 	</div>
-		<script src="./js/jquery.min.js"></script>
+	<script src="./js/jquery.min.js"></script>
+	<script src="./js/main.js"></script>
 </body>
 </html>
